see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

29-Jan-2011 Jean-Marie Simonet
 $ Deleting one unused string from all installation ini files.

28-Jan-2011 Mark Dexter
# Fix MySQLi wording in installation language files

28-Jan-2011 Christophe Demko
 # [#23915] Trashed articles - no indication of being trashed , when viewed at front of site
 # [#24404] Update GeSHI to 1.0.8.9 (Michael Babker)
 # [#24269] com_contact view contact > links (Nikolai Plath, Sergio Iglesias, Jennifer Marriott)
 # [#24287] Disabling modules on a page leaves error messages (Nikolai Plath)
 # [#24305] 3rd party components install in location "site" instead of "administrator" (Samuel Moffatt)
 # [#24444] com_newsfeeds doesn't set default view in frontend (Jeremy Wilken)
 # [#24394] Error page styling forces error box to far left (Jeremy Wilken, Nikolai Plath)
 # [#24309] PHP Strict Standards Message, Category Blog (bill richardson)

28-Jan-2011 Jean-Marie Simonet
 $ Correcting parse issues in 14 installation langs
 # [#24657] Enabling debug language mode in installation application. Thanks Christophe.
 
27-Jan-2011 Mark Dexter
# [#24644] Joomla! Web Application Framework library is uninstallable
# Fix SVN properties on some joomla_update sql scripts 

27-Jan-2011 Christophe Demko
 # [#24558] Improve the Directory Permissions in com_admin (Rouven Weßling)

27-Jan-2011 Jean-Marie Simonet
 # [#24320] Unstyled dialog when clicking 'new' in module manager. Thanks Andrea.
 # Updating credits
 # [#24550] Manifest data is not being serialized as JSON during install and discovery install. Thanks Brian Towles.

26-Jan-2011 Mark Dexter