@@ -13,6 +13,7 @@ defined('_JEXEC') or die;
 jimport('joomla.application.component.controller');
 jimport('joomla.application.component.helper');
 
+require_once JPATH_COMPONENT.DS.'helpers'.DS.'mailto.php';
 require_once JPATH_COMPONENT.DS.'controller.php';
 
 $controller = JController::getInstance('Mailto');
